--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
       ></div>
 
       <div
-        class="relative max-w-7xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-12"
+        class="relative max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-12"
       >
         <!-- Brand -->
         <div>
