--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
               alt="Logo"
               class="w-10 h-10 rounded-full shadow-lg"
             /> -->
-            <h2 class="text-3xl font-extrabold text-yellow-400">MyPortfolio</h2>
+            <h2 class="text-xl md:text-3xl font-extrabold text-yellow-400">MyPortfolio</h2>
           </div>
           <p class="text-slate-300 leading-relaxed">
             Showcase pribadi yang menampilkan keahlian, karya, dan layanan
