--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </a> -->
 
                 <a
-                  href="https://www.linkedin.com/in/agus-yustika-prayoga"
+                  href="https://www.linkedin.com/in/agus-yustika"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="group"
