--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
               <!-- Ikon Media Sosial -->
               <div class="flex items-center space-x-4">
-                <!-- <a
+                <a
                   href="https://www.instagram.com/agusyustika_25"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -197,7 +197,7 @@
                   <i
                     class="fab fa-instagram text-3xl text-yellow-400 group-hover:text-pink-500 transition-all duration-300"
                   ></i>
-                </a> -->
+                </a>
 
                 <a
                   href="https://www.linkedin.com/in/agus-yustika"
@@ -633,6 +633,23 @@
               <p class="text-sm text-slate-300 mt-1">Coding Studio</p>
             </div>
           </div>
+          
+           <!-- Card 5 -->
+          <div
+            class="bg-blue-800/40 rounded-xl overflow-hidden border border-sky-500/30 shadow-xl hover:border-yellow-400 hover:shadow-yellow-500/20 transition-all duration-300 group"
+          >
+            <img
+              src="assets/Sertifikat/Sertifikat_Digital_Marketing.jpg"
+              class="w-full h-52 object-cover group-hover:scale-105 transition-transform duration-300"
+              alt="Fundamental Front End Web Development"
+            />
+            <div class="p-3 ml-2">
+              <h3 class="font-semibold text-yellow-400 text-lg">
+                Digital Marketing Bootcamp
+              </h3>
+              <p class="text-sm text-slate-300 mt-1">MySkill</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -653,7 +670,7 @@
       <div class="container mx-auto px-6 max-w-6xl relative z-10">
         <!-- Section Header -->
         <div class="text-center mb-16">
-          <h2 class="text-3xl font-semibold text-sky-400 mb-3">My projects</h2>
+          <h2 class="text-3xl font-semibold text-sky-400 mb-3">My Projects</h2>
           <div class="mt-2 flex justify-center">
             <span class="block w-24 h-1 bg-yellow-400 rounded-full"></span>
           </div>
@@ -988,26 +1005,41 @@
             Hubungi saya untuk kolaborasi, proyek baru, atau konsultasi digital.
           </p>
           <div class="flex space-x-4 text-2xl justify-center">
-            <!-- <a
-              href="#"
-              class="p-3 bg-blue-800/30 rounded-full hover:bg-yellow-400 hover:text-blue-900 shadow-md transition-all duration-300"
-              ><i class="ri-instagram-line"></i
-            ></a> -->
             <a
-              href="#"
-              class="p-3 bg-blue-800/30 rounded-full hover:bg-yellow-400 hover:text-blue-900 shadow-md transition-all duration-300"
-              ><i class="ri-github-line"></i
-            ></a>
-            <a
-              href="#"
-              class="p-3 bg-blue-800/30 rounded-full hover:bg-yellow-400 hover:text-blue-900 shadow-md transition-all duration-300"
-              ><i class="ri-linkedin-box-line"></i
-            ></a>
-            <a
-              href="#"
-              class="p-3 bg-blue-800/30 rounded-full hover:bg-yellow-400 hover:text-blue-900 shadow-md transition-all duration-300"
-              ><i class="ri-facebook-circle-line"></i
-            ></a>
+                  href="https://www.instagram.com/agusyustika_25"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="group"
+                  title="Instagram @agusyustika_25"
+                >
+                  <i
+                    class="fab fa-instagram text-3xl text-yellow-400 group-hover:text-pink-500 transition-all duration-300"
+                  ></i>
+                </a>
+
+                <a
+                  href="https://www.linkedin.com/in/agus-yustika"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="group"
+                  title="LinkedIn Agus Yustika"
+                >
+                  <i
+                    class="fab fa-linkedin text-3xl text-yellow-400 group-hover:text-blue-500 transition-all duration-300"
+                  ></i>
+                </a>
+
+                <a
+                  href="https://github.com/AgusYustikaGitHub"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="group"
+                  title="GitHub Agus Yustika"
+                >
+                  <i
+                    class="fab fa-github text-3xl text-yellow-400 group-hover:text-gray-300 transition-all duration-300"
+                  ></i>
+                </a>
           </div>
         </div>
       </div>
