--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="md:w-1/3 flex justify-center mb-10 md:mb-0 md:mr-16">
             <div class="relative group">
               <img
-                src="./assets/foto.jpeg"
+                src="./assets/Pas_Foto.png"
                 alt="Agus Yustika"
                 class="rounded-full w-72 h-72 object-cover border-8 border-yellow-500 shadow-2xl transition-transform duration-500 group-hover:scale-105"
               />
@@ -188,11 +188,11 @@
               <!-- Ikon Media Sosial -->
               <div class="flex items-center space-x-4">
                 <a
-                  href="https://www.instagram.com/agusyustika_25"
+                  href="https://www.instagram.com/agusyustika25"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="group"
-                  title="Instagram @agusyustika_25"
+                  title="Instagram @agusyustika25"
                 >
                   <i
                     class="fab fa-instagram text-3xl text-yellow-400 group-hover:text-pink-500 transition-all duration-300"
@@ -1006,11 +1006,11 @@
           </p>
           <div class="flex space-x-4 text-2xl justify-center">
             <a
-                  href="https://www.instagram.com/agusyustika_25"
+                  href="https://www.instagram.com/agusyustika25"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="group"
-                  title="Instagram @agusyustika_25"
+                  title="Instagram @agusyustika25"
                 >
                   <i
                     class="fab fa-instagram text-3xl text-yellow-400 group-hover:text-pink-500 transition-all duration-300"
