--- a/index.html
+++ b/index.html
@@ -166,12 +166,7 @@
               </span>
             </h2>
             <p class="text-base mb-8 text-gray-200 max-w-xl leading-relaxed">
-              Fresh graduate yang fokus pada pengembangan web menggunakan
-              Laravel, Tailwind CSS, dan MySQL. Terbiasa membangun fitur CRUD,
-              API, serta dashboard admin yang responsif. Memiliki pemahaman
-              tentang struktur kode yang rapi, keamanan dasar aplikasi, serta
-              optimasi performa. Siap berkontribusi dalam tim pengembangan untuk
-              membangun aplikasi yang stabil dan mudah dipelihara.
+              Lulusan S1 Sistem Komputer dari Institut Teknologi dan Bisnis STIKOM Bali dengan fokus sebagai Fullstack Web Developer. Menguasai pengembangan aplikasi web end-to-end menggunakan Laravel (MVC) untuk backend serta Tailwind CSS dan JavaScript untuk frontend. Berpengalaman dalam perancangan database MySQL, implementasi REST API, serta pembuatan antarmuka responsif. Terbiasa membangun sistem informasi dan aplikasi booking berbasis web melalui proyek akademik dan magang. Siap berkontribusi sebagai Junior Fullstack Web Developer.
             </p>
 
             <!-- CV dan Sosial Media -->
