--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               </span>
             </h2>
             <p class="text-base mb-8 text-gray-200 max-w-xl leading-relaxed">
-              Lulusan S1 Sistem Komputer dari Institut Teknologi dan Bisnis STIKOM Bali dengan fokus sebagai Fullstack Web Developer. Menguasai pengembangan aplikasi web end-to-end menggunakan Laravel (MVC) untuk backend serta Tailwind CSS dan JavaScript untuk frontend. Berpengalaman dalam perancangan database MySQL, implementasi REST API, serta pembuatan antarmuka responsif. Terbiasa membangun sistem informasi dan aplikasi booking berbasis web melalui proyek akademik dan magang. Siap berkontribusi sebagai Junior Fullstack Web Developer.
+              Lulusan S1 Sistem Komputer dengan fokus sebagai Fullstack Web Developer. Menguasai pengembangan aplikasi web end-to-end menggunakan Laravel (MVC) untuk backend serta Tailwind CSS dan JavaScript untuk frontend. Berpengalaman dalam perancangan database MySQL, implementasi REST API, serta pembuatan antarmuka responsif. Terbiasa membangun sistem informasi dan aplikasi booking berbasis web melalui proyek akademik dan magang. Siap berkontribusi sebagai Junior Fullstack Web Developer.
             </p>
 
             <!-- CV dan Sosial Media -->
