--- a/index.html
+++ b/index.html
@@ -767,7 +767,52 @@
             </div>
           </div>
 
-          <!-- Project 2 – MuscleForge Fitness Website -->
+                    <!-- Project 2 – Productivity Dashboard Web App -->
+          <div
+            class="project-item bg-blue-800/40 border border-sky-500/30 hover:border-yellow-400 hover:bg-blue-800/60 rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300"
+            data-category="custom"
+          >
+            <img
+              src="./assets/Project/productivity.png"
+              alt="Productivity Dashboard Web App"
+              class="w-full h-52 object-cover"
+            />
+            <div class="p-6 text-white">
+              <h3 class="text-xl font-semibold mb-2 text-yellow-400">
+                Productivity Web App
+              </h3>
+              <p class="text-slate-300 text-sm leading-relaxed mb-4">
+                Aplikasi produktivitas berbasis web yang dirancang untuk
+                membantu pengguna mengelola aktivitas harian secara terstruktur
+                dan efisien. Fitur utama meliputi task manager, habit tracker,
+                goal tracking, kalender manager, time tracker, serta daily
+                journal. Antarmuka dirancang dengan tampilan yang bersih,
+                modern, dan intuitif sehingga memudahkan pengguna dalam memantau
+                progres, mengatur prioritas, serta meningkatkan produktivitas
+                secara konsisten.
+              </p>
+              <div class="flex flex-wrap gap-2">
+                <span
+                  class="bg-sky-500/20 text-sky-300 text-xs px-3 py-1 rounded-full"
+                  >HTML</span
+                >
+                <span
+                  class="bg-sky-500/20 text-sky-300 text-xs px-3 py-1 rounded-full"
+                  >Tailwind CSS</span
+                >
+                <span
+                  class="bg-sky-500/20 text-sky-300 text-xs px-3 py-1 rounded-full"
+                  >JavaScript</span
+                >
+                <!-- <span
+                  class="bg-sky-500/20 text-sky-300 text-xs px-3 py-1 rounded-full"
+                  >Chart.js</span
+                > -->
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 3 – MuscleForge Fitness Website -->
           <div
             class="project-item bg-blue-800/40 border border-sky-500/30 hover:border-yellow-400 hover:bg-blue-800/60 rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300"
             data-category="landing"
@@ -807,7 +852,7 @@
             </div>
           </div>
 
-          <!-- Project 3 – FlavourRetreat Restaurant Website -->
+          <!-- Project 4 – FlavourRetreat Restaurant Website -->
           <div
             class="project-item bg-blue-800/40 border border-sky-500/30 hover:border-yellow-400 hover:bg-blue-800/60 rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300"
             data-category="company"
@@ -846,7 +891,7 @@
             </div>
           </div>
 
-          <!-- Project 4 – CoffeeConnect Website -->
+          <!-- Project 5 – CoffeeConnect Website -->
           <div
             class="project-item bg-blue-800/40 border border-sky-500/30 hover:border-yellow-400 hover:bg-blue-800/60 rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300"
             data-category="company"
